# fugue-evo

./: .gitignore  AUDIT-2026-07.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md
.github/plans/: ergonomics.md
.github/workflows/: ci.yml  docs.yml  publish.yml
crates/fugue-evo-wasm/: Cargo.toml  README.md
crates/fugue-evo-wasm/examples/: index.html  node_example.mjs  worker.js  worker_example.html
crates/fugue-evo-wasm/src/: config.rs  error.rs  explore.rs  fitness.rs  interactive.rs  lib.rs  optimizers.rs  result.rs
crates/fugue-evo-wasm/tests/: e_wasm_regressions.rs  explore_node.rs  wasm_tests.rs
docs/: CNAME  book.toml  fugue-brand.js  fugue-evo-wasm-loader.js  fugue-theme.css  fugue-viz.css  fugue-viz.js
docs/src/: SUMMARY.md  api-docs.md  changelog.md  contributing.md  introduction.md  playground.md
docs/src/architecture/: fugue-integration.md  philosophy.md  type-system.md
docs/src/getting-started/: concepts.md  first-optimization.md  installation.md  quickstart.md
docs/src/how-to/: checkpointing.md  choosing-algorithm.md  custom-fitness.md  custom-genome.md  custom-operators.md  multi-objective.md  parallel-evolution.md  wasm.md
docs/src/reference/: algorithms.md  fitness.md  genomes.md  operators.md  termination.md
docs/src/reference/algorithms/: cmaes.md  eda.md  island-model.md  nsga2.md  simple-ga.md
docs/src/reference/genomes/: bit-string.md  permutation.md  real-vector.md  tree-genome.md
docs/src/reference/operators/: crossover.md  mutation.md  selection.md
docs/src/tutorials/: advanced-algorithms.md  cmaes.md  continuous-optimization.md  genetic-programming.md  hyperparameter-learning.md  interactive-evolution.md  island-model.md  multimodal-optimization.md
docs/theme/: head.hbs
docs/theme/fonts/: fonts.css
docs/viz/: cmaes.js  inline.js  island.js  landscape.js  nsga2.js  playground.js
examples/: bayesian_evolution.rs  checkpointing.rs  cma_es_example.rs  hyperparameter_learning.rs  interactive_evolution.rs  island_model.rs  rastrigin_benchmark.rs  sphere_optimization.rs  symbolic_regression.rs
src/: error.rs  lib.rs
src/algorithms/: cmaes.rs  evolution_strategy.rs  island.rs  mod.rs  nsga2.rs  simple_ga.rs  steady_state.rs
src/algorithms/eda/: mod.rs  umda.rs
src/checkpoint/: mod.rs  recovery.rs  rng.rs  state.rs
src/diagnostics/: convergence.rs  mod.rs
src/fitness/: benchmarks.rs  mod.rs  traits.rs
src/fugue_integration/: bayesian_ga.rs  effect_handlers.rs  evolution_model.rs  mod.rs  trace_operators.rs
src/genome/: bit_string.rs  bounds.rs  composite.rs  dynamic_ops.rs  dynamic_real_vector.rs  mod.rs  permutation.rs  real_vector.rs  traits.rs  tree.rs
src/hyperparameter/: adaptive.rs  bayesian.rs  mod.rs  schedules.rs  self_adaptive.rs
src/interactive/: aggregation.rs  algorithm.rs  bradley_terry.rs  evaluator.rs  mod.rs  selection_strategy.rs  session.rs  traits.rs  uncertainty.rs
src/operators/: crossover.rs  mod.rs  mutation.rs  selection.rs  traits.rs
src/population/: individual.rs  mod.rs  population.rs
src/termination/: mod.rs
tests/: e-checkpoint_resume.rs  e-hyper_adaptive_ga.rs  e-interactive_audit.rs  e_integration_bayesian.rs  e_tests_nan_policy.rs  e_tests_seeded_determinism.rs  property_tests.rs
