[workspace]
members = [".", "crates/fugue-evo-wasm"]

[package]
name = "fugue-evo"
version = "0.1.0"
edition = "2021"
authors = ["Alex Nodeland"]
description = "A Probabilistic Genetic Algorithm Library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexnodeland/fugue-evo"
keywords = ["genetic-algorithm", "evolution", "optimization", "probabilistic-programming"]
categories = ["algorithms", "science"]

[features]
default = ["std", "parallel", "checkpoint"]
std = []
parallel = ["rayon"]
checkpoint = []  # File-based checkpointing (requires std)

[dependencies]
# Linear algebra for CMA-ES
nalgebra = "0.33"

# Randomness
rand = "0.8"
rand_distr = "0.4"

# Parallelism (optional)
rayon = { version = "1.10", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"

# Observability
tracing = "0.1"
fugue-ppl = "0.1.0"

# WASM support (enabled via getrandom js feature when targeting wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# Testing utilities
proptest = "1.5"
criterion = "0.5"
approx = "0.5"
tempfile = "3.10"

# Examples requiring parallel feature
[[example]]
name = "island_model"
required-features = ["parallel"]
