[workspace]
members = [".", "crates/fugue-evo-wasm"]

# Cargo only honors [profile.*] settings declared in the workspace ROOT
# manifest, never in a member's Cargo.toml (see AUDIT-2026-07.md EV-31). These
# settings apply to `wasm-pack build` for crates/fugue-evo-wasm, shrinking and
# optimizing the WASM binary (opt-level "s" + LTO); they were previously
# declared (and silently ignored) in crates/fugue-evo-wasm/Cargo.toml.
[profile.release]
opt-level = "s"
lto = true

[package]
name = "fugue-evo"
version = "0.1.0"
edition = "2021"
authors = ["Alex Nodeland"]
description = "A Probabilistic Genetic Algorithm Library for Rust"
license = "MIT"
repository = "https://github.com/alexnodeland/fugue-evo"
keywords = ["genetic-algorithm", "evolution", "optimization", "probabilistic-programming"]
categories = ["algorithms", "science"]

[features]
default = ["std", "parallel", "checkpoint"]
std = []
parallel = ["rayon"]
checkpoint = []  # File-based checkpointing (requires std)

[dependencies]
# Linear algebra for CMA-ES
nalgebra = "0.33"

# Randomness
rand = "0.8"
rand_distr = "0.4"
# Serializable, reproducible RNG for checkpoint round-tripping (EV-02)
rand_chacha = { version = "0.3", features = ["serde1"] }

# Parallelism (optional)
rayon = { version = "1.10", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"

# Observability
tracing = "0.1"
fugue-ppl = "0.1.0"

# WASM support (enabled via getrandom js feature when targeting wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# Testing utilities
#
# AUDIT EV-74: proptest unconditionally depends on rand 0.9 (rand_core 0.9,
# rand_chacha 0.9 via rand_xorshift's TestRng), which duplicates our own
# direct rand 0.8 stack (rand 0.8.5 / rand_core 0.6.4 / rand_chacha 0.3.1,
# used by fugue-evo, fugue-ppl, and rand_distr). This is NOT a version-spec
# problem we can fix by pinning proptest: `cargo tree -i rand@0.9.2` and
# `cargo tree -i rand_chacha@0.9.0` both bottom out at proptest even when
# proptest is pinned back to 1.7.0 (its earliest release compatible with our
# ">=1.5, <2" requirement) -- proptest has required rand 0.9 unconditionally
# since at least that version. The upstream sibling crate `fugue` has the
# identical duplication in its own Cargo.lock despite also pinning
# `proptest = "1.0"`, confirming this is upstream-forced, not a local
# misconfiguration. It only affects dev/test builds (proptest is a
# dev-dependency), doubling RNG-stack compile units there; it does not affect
# release/library builds. Revisit if/when proptest re-converges on rand 0.8,
# or migrates its own dependents to rand 0.9 across the board.
proptest = "1.5"
criterion = "0.5"
approx = "0.5"
tempfile = "3.10"

# Examples requiring parallel feature
[[example]]
name = "island_model"
required-features = ["parallel"]
