[workspace]
members = [".", "crates/fugue-evo-wasm"]

# Cargo only honors [profile.*] settings declared in the workspace ROOT
# manifest, never in a member's Cargo.toml (see AUDIT-2026-07.md EV-31). These
# settings apply to `wasm-pack build` for crates/fugue-evo-wasm, shrinking and
# optimizing the WASM binary (opt-level "s" + LTO); they were previously
# declared (and silently ignored) in crates/fugue-evo-wasm/Cargo.toml.
[profile.release]
opt-level = "s"
lto = true

[package]
name = "fugue-evo"
version = "0.1.0"
edition = "2021"
authors = ["Alex Nodeland"]
description = "A Probabilistic Genetic Algorithm Library for Rust"
license = "MIT"
repository = "https://github.com/alexnodeland/fugue-evo"
keywords = ["genetic-algorithm", "evolution", "optimization", "bayesian", "ppl"]
categories = ["algorithms", "science"]

[features]
default = ["std", "parallel", "checkpoint"]
std = []
parallel = ["rayon"]
checkpoint = []  # File-based checkpointing (requires std)

[dependencies]
# Linear algebra for CMA-ES
nalgebra = "0.33"

# Randomness
rand = "0.8"
rand_distr = "0.4"
# Serializable, reproducible RNG for checkpoint round-tripping (EV-02)
rand_chacha = { version = "0.3", features = ["serde1"] }

# Parallelism (optional)
rayon = { version = "1.10", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"

# Observability
tracing = "0.1"
fugue-ppl = { path = "../fugue", version = "0.2.0" }

# WASM support (enabled via getrandom js feature when targeting wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# Testing utilities
#
# AUDIT EV-74: proptest migrated its internal RNG stack to rand 0.9 in the
# 1.7.0 release. proptest >= 1.7 therefore pulls in a *second* major of the
# RNG stack (rand 0.9 / rand_core 0.9 / rand_chacha 0.9 via rand_xorshift's
# TestRng) alongside our own direct rand 0.8 stack (rand 0.8.5 / rand_core
# 0.6.4 / rand_chacha 0.3.1, used by fugue-evo, fugue-ppl, and rand_distr),
# duplicating the RNG-stack compile units in dev/test builds.
#
# The 1.5.x / 1.6.x line still uses rand 0.8, so we pin below 1.7 to collapse
# the duplication. Verified empirically: `cargo update -p proptest --precise
# 1.6.0` removes rand 0.9.2 / rand_chacha 0.9.0 / rand_core 0.9.3 entirely,
# after which `cargo tree -d` reports a single rand major (0.8.5) and
# `cargo check --all-targets` + the full property-test suite still pass. The
# `Makefile`'s `deps-check` target runs `cargo tree -d` in CI to catch any
# future reintroduction of a duplicate rand major. Revisit (dropping the
# upper bound and migrating our own rand_distr/rand_chacha usage to 0.9) if we
# ever need a proptest >= 1.7 feature.
proptest = ">=1.5, <1.7"
criterion = "0.5"
approx = "0.5"
tempfile = "3.10"

# Examples requiring parallel feature
[[example]]
name = "island_model"
required-features = ["parallel"]
