[package]
name = "fugue-evo-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Alex Nodeland"]
description = "WebAssembly bindings for fugue-evo genetic algorithm library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexnodeland/fugue-evo"
keywords = ["genetic-algorithm", "wasm", "webassembly", "optimization"]
categories = ["algorithms", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core library without parallel/checkpoint features
fugue-evo = { path = "../..", default-features = false, features = ["std"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Serialization for JS interop
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation with JS entropy
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
