[package]
name = "fugue-evo-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Alex Nodeland"]
description = "WebAssembly bindings for fugue-evo genetic algorithm library"
license = "MIT"
repository = "https://github.com/alexnodeland/fugue-evo"
keywords = ["genetic-algorithm", "wasm", "webassembly", "optimization"]
categories = ["algorithms", "wasm"]
# Distributed via `wasm-pack build` output (npm-shaped pkg/), not crates.io;
# its fugue-evo path dependency has no `version`, so `cargo publish` would
# reject the manifest anyway.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core library without parallel/checkpoint features
fugue-evo = { path = "../..", default-features = false, features = ["std"] }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# Better panic diagnostics at the JS boundary (logs Rust file/line to the
# console instead of an opaque `unreachable` trap). See AUDIT EV-09.
console_error_panic_hook = "0.1"

# Serialization for JS interop
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation with JS entropy
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# [profile.release] (opt-level = "s", lto = true) lives in the WORKSPACE ROOT
# Cargo.toml (../../Cargo.toml), not here. Cargo only honors [profile.*] from
# the workspace root manifest; a copy in a non-root member is silently ignored
# (see AUDIT-2026-07.md EV-31). Edit the root manifest to change these.

[package.metadata.wasm-pack.profile.release]
# Enable wasm-opt for smaller bundle size (~20-30% reduction)
wasm-opt = ["-Os"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
# Enable reference types for better performance
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
